--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,130 +1,78 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: var(--titleFont);
-  font-weight: 700;
-}
-
-h1 {
-  text-align: center;
-  font-size: var(--font-h1);
-  line-height: 99%;
-  letter-spacing: -2px;
-}
-
-@media (min-width: 992px) {
-  h1 {
-    letter-spacing: 4px;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+ 
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+ 
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+ 
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+ 
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+ 
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+ 
+    --primary: 165 63% 20%;
+    --primary-foreground: 132 45% 87%;
+ 
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+ 
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+ 
+    --destructive: 0 72.2% 50.6%;
+    --destructive-foreground: 210 40% 98%;
+ 
+    --ring: 222.2 84% 4.9%;
+ 
+    --radius: 0.5rem;
+  }
+ 
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+ 
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+ 
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+ 
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+ 
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+ 
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+ 
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+ 
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+ 
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+ 
+    --ring: hsl(212.7,26.8%,83.9);
   }
 }
-
-.disable-scrollbars {
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-}
-
-.disable-scrollbars::-webkit-scrollbar {
-  background: transparent;
-  width: 0;
-  height: 0;
-}
-
-.h1-display {
-  text-align: center;
-  font-size: var(--font-h1);
-  line-height: 100%;
-  letter-spacing: -2px;
-}
-
-@media (min-width: 992px) {
-  .h1-display {
-    letter-spacing: -4px;
+ 
+@layer base {
+  * {
+    @apply border-border;
   }
-}
-
-h1 .holder {
-  position: relative;
-}
-
-h2 {
-  font-size: var(--font-h2);
-  line-height: 130%;
-}
-
-.h2-display {
-  font-size: var(--font-h2-display);
-  line-height: 120%;
-  letter-spacing: -0.25px;
-}
-
-@media (min-width: 768px) {
-  .h2-display {
-    line-height: 100%;
-    letter-spacing: -1px;
+  body {
+    @apply bg-background text-foreground;
   }
-}
-
-h3,
-.h3-display {
-  font-size: var(--font-h3);
-}
-
-h6 {
-  font-family: var(--bodyFont);
-  font-weight: 700;
-  font-size: var(--font-h6);
-}
-
-p {
-  font-size: var(--font-body);
-  line-height: 160%;
-  color: var(--color-text-secondary);
-}
-
-p + p {
-  margin-top: var(--spacing-xs);
-}
-
-h2 + p {
-  margin-top: var(--spacing-xs);
-}
-
-h3 + p {
-  margin-top: var(--spacing-xxs);
-}
-
-p + h2 {
-  margin-top: var(--spacing-m);
-}
-
-p + h3 {
-  margin-top: var(--spacing-m);
-}
-
-.xs {
-  margin-top: var(--spacing-xs);
-}
-
-.medium {
-  margin-top: var(--spacing-m);
-}
-
-.extra {
-  margin-top: var(--spacing-l);
-}
-
-.amp {
-  font-family: var(--ampFont);
-  font-style: italic;
-  font-weight: 400;
-}
-
-.content {
-  position: relative;
-  z-index: 10;
-  width: 100%;
-  height: 100%;
 }
