--- a/src/main.css
+++ b/src/main.css
@@ -1,24 +1,9 @@
 @import 'tailwindcss';
+@import url('non.geist');
+@import url('non.geist/mono');
 
-
-:root {
-    --sh-class: #2d5e9d;
-    --sh-identifier: #354150;
-    --sh-sign: #8996a3;
-    --sh-string: #007f7a;
-    --sh-keyword: #e02518;
-    --sh-comment: #a19595;
-    --sh-jsxliterals: #6266d1;
-    --sh-property: #e25a1c;
-    --sh-entity: #e25a1c;
+body {
+  font-family: 'Geist Variable';
 }
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --sh-class: #4c97f8;
-        --sh-identifier: white;
-        --sh-keyword: #f47067;
-        --sh-string: #0fa295;
-    }
-}
+/* For Geist Mono */
 
