feat: drop taiwlind 4 switch to 3.4.2

--- a/src/main.css
+++ b/src/main.css
@@ -1,9 +1,11 @@
-@import 'tailwindcss';
 @import url('non.geist');
 @import url('non.geist/mono');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
   font-family: 'Geist Variable';
 }
 /* For Geist Mono */
-
